--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:20
-
-ENV DB_HOST="mysql"
+#DB_HOST--mysql is the address to connect backend to mysql db.
+ENV DB_HOST="mysql" 
 RUN mkdir -p /opt/app
 
 RUN useradd expense &&\
