--- a/mysql/Dockerfile
+++ b/mysql/Dockerfile
@@ -16,5 +16,5 @@ ENV MYSQL_ROOT_PASSWORD=ExpenseApp@1
 RUN groupadd expense && \
     useradd -g expense expense
 ADD /schema/*.sql /docker-entrypoint-initdb.d
-RUN chown -R expense:expense /docker-entrypoint-initdb.d
+RUN chown -R expense:expense /var/lib/mysql /var/run/mysqld /docker-entrypoint-initdb.d
 USER expense
