--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -29,32 +29,65 @@
 # usermod -aG expense expense → Ensures the user is added to the group.
 # chown -R expense:expense /opt/app → Sets ownership of /opt/app.
 
+#EG:2
+# FROM node:20.18.0-alpine3.20
 
+# # Set environment variable for MySQL container name
+# ENV DB_HOST="mysql"
+
+# # Expose application port
+# EXPOSE 8080
+
+# # Create group & user properly
+# # RUN addgroup -g expense && \
+# #     adduser -m -g expense -s /bin/bash expense && \
+# #     mkdir -p /opt/app && \
+# #     chown -R expense:expense /opt/app
+
+# RUN addgroup expense && \
+#     adduser -g expense expense && \
+#     usermod -ag expense expense && \
+#     chown -R expense:expense /opt/app
+
+# # Set working directory
+# WORKDIR /opt/app
+
+# # Copy project files
+# COPY node/* .
+
+# # Install dependencies
+# RUN npm install 
+
+# # Switch to non-root user
+# USER expense
+
+# # Start the application
+# CMD ["node", "index.js"]
+
+
+#EG:3
+# Use an official Node.js image as a base
 FROM node:20.18.0-alpine3.20
 
-# Set environment variable for MySQL container name
-ENV DB_HOST="mysql"
-
-# Expose application port
-EXPOSE 8080
-
-# Create group & user properly
-RUN addgroup -g 1001 expense && \
-    adduser -m -g expense -s /bin/bash expense && \
+# Create a group and a user
+RUN addgroup -S expense && adduser -S expense -G expense && \
     mkdir -p /opt/app && \
     chown -R expense:expense /opt/app
 
 # Set working directory
 WORKDIR /opt/app
 
-# Copy project files
-COPY node/* .
+# Copy package.json and install dependencies
+COPY node/*.js .
+COPY node/package.json .
+RUN npm install
 
-# Install dependencies
-RUN npm install 
 
-# Switch to non-root user
+# Switch to the non-root user
 USER expense
 
+# Expose the application port
+EXPOSE 8080
+
 # Start the application
-CMD ["node", "index.js"]
+CMD ["node", "server.js"]
