--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,26 +1,26 @@
-# FROM node:20
-# #DB_HOST--mysql is the address to connect backend to mysql db. (mysql is name of MySQL Docker)
-# ENV DB_HOST="mysql"      
-# EXPOSE 8080
-# RUN mkdir -p /opt/app
+FROM node:20
+#DB_HOST--mysql is the address to connect backend to mysql db. (mysql is name of MySQL Docker)
+ENV DB_HOST="mysql"      
+EXPOSE 8080
+RUN mkdir -p /opt/app
 
-# # RUN useradd expense &&\
-# #     groupadd -g expense expense && \
-# #     chmod -aG expense:expense /opt/app
-# RUN groupadd expense && \
-#     useradd -g expense expense && \
-#     usermod -aG expense expense && \
-#     chown -R expense:expense /opt/app
+# RUN useradd expense &&\
+#     groupadd -g expense expense && \
+#     chmod -aG expense:expense /opt/app
+RUN groupadd expense && \
+    useradd -g expense expense && \
+    usermod -aG expense expense && \
+    chown -R expense:expense /opt/app
 
-# WORKDIR /opt/app
+WORKDIR /opt/app
 
-# COPY /node/*.js .
-# COPY /node/*.json .
+COPY /node/*.js .
+COPY /node/*.json .
 
-# RUN npm install
-# # ADD *.service /etc/systemd/system/backend.service
-# USER expense
-# CMD ["node", "index.js"]
+RUN npm install
+# ADD *.service /etc/systemd/system/backend.service
+USER expense
+CMD ["node", "index.js"]
 
 
 
@@ -65,32 +65,32 @@
 # CMD ["node", "index.js"]
 
 
-#EG:3
-# Use an official Node.js image as a base
-FROM node:20.18.0-alpine3.20
+# #EG:3
+# # Use an official Node.js image as a base
+# FROM node:20.18.0-alpine3.20
 
-ENV DB_HOST="mysql"
-# Create a group and a user
-RUN addgroup -S expense && adduser -S expense -G expense && \
-    mkdir -p /opt/app && \
-    chown -R expense:expense /opt/app
+# ENV DB_HOST="mysql"
+# # Create a group and a user
+# RUN addgroup -S expense && adduser -S expense -G expense && \
+#     mkdir -p /opt/app && \
+#     chown -R expense:expense /opt/app
 
-# Set working directory
-WORKDIR /opt/app
+# # Set working directory
+# WORKDIR /opt/app
 
-# Copy package.json and install dependencies
-COPY package.json .
+# # Copy package.json and install dependencies
+# COPY package.json .
 
-COPY *.js .
+# COPY *.js .
 
-RUN npm install
+# RUN npm install
 
 
-# Switch to the non-root user
-USER expense
+# # Switch to the non-root user
+# USER expense
 
-# Expose the application port
-EXPOSE 8080
+# # Expose the application port
+# EXPOSE 8080
 
-# Start the application
-CMD ["node", "index.js"]
+# # Start the application
+# CMD ["node", "index.js"]
