--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -25,6 +25,9 @@ RUN rm -rf /usr/share/nginx/html/*
 # Copy application code to Nginx's web root
 COPY code/* /usr/share/nginx/html/
 
+RUN rm -rf /etc/nginx/nginx.conf
+RUN rm -rf /etc/nginx/conf.d/default.conf
+
 # Copy custom Nginx configuration
 COPY nginx.conf /etc/nginx/nginx.conf
 
@@ -33,3 +36,5 @@ COPY expense.conf /etc/nginx/conf.d/expense.conf
 
 # Start Nginx in foreground mode
 CMD ["nginx", "-g", "daemon off;"]
+
+/etc/nginx/conf.d/expense.conf
