--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,26 +1,26 @@
-FROM node:20
-#DB_HOST--mysql is the address to connect backend to mysql db. (mysql is name of MySQL Docker)
-ENV DB_HOST="mysql"      
-EXPOSE 8080
-RUN mkdir -p /opt/app
+# FROM node:20
+# #DB_HOST--mysql is the address to connect backend to mysql db. (mysql is name of MySQL Docker)
+# ENV DB_HOST="mysql"      
+# EXPOSE 8080
+# RUN mkdir -p /opt/app
 
-# RUN useradd expense &&\
-#     groupadd -g expense expense && \
-#     chmod -aG expense:expense /opt/app
-RUN groupadd expense && \
-    useradd -g expense expense && \
-    usermod -aG expense expense && \
-    chown -R expense:expense /opt/app
+# # RUN useradd expense &&\
+# #     groupadd -g expense expense && \
+# #     chmod -aG expense:expense /opt/app
+# RUN groupadd expense && \
+#     useradd -g expense expense && \
+#     usermod -aG expense expense && \
+#     chown -R expense:expense /opt/app
 
-WORKDIR /opt/app
+# WORKDIR /opt/app
 
-COPY /node/*.js .
-COPY /node/*.json .
+# COPY /node/*.js .
+# COPY /node/*.json .
 
-RUN npm install
-# ADD *.service /etc/systemd/system/backend.service
-USER expense
-CMD ["node", "index.js"]
+# RUN npm install
+# # ADD *.service /etc/systemd/system/backend.service
+# USER expense
+# CMD ["node", "index.js"]
 
 
 
@@ -94,3 +94,29 @@ CMD ["node", "index.js"]
 
 # # Start the application
 # CMD ["node", "index.js"]
+
+
+
+
+#After best practice
+FROM node:20 AS build
+RUN mkdir -p /opt/app
+WORKDIR /opt/app
+COPY /node/*.js .
+COPY /node/*.json .
+RUN npm install
+# ADD *.service /etc/systemd/system/backend.service
+
+
+
+FROM node:23-alpine3.20
+ENV DB_HOST="mysql"   
+EXPOSE 8080
+RUN mkdir -p /opt/app
+RUN groupadd expense && \
+    useradd -g expense expense && \
+    usermod -aG expense expense && \
+    chown -R expense:expense /opt/app
+COPY --from=build /opt/app /opt/app
+USER expense
+CMD ["node", "index.js"]
