--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -113,10 +113,11 @@ FROM node:23-alpine3.20
 ENV DB_HOST="mysql"   
 EXPOSE 8080
 RUN mkdir -p /opt/app
-RUN groupadd expense && \
-    useradd -g expense expense && \
-    usermod -aG expense expense && \
+RUN addgroup -S expense && adduser -S expense -G expense && \
+    mkdir -p /opt/app && \
     chown -R expense:expense /opt/app
 COPY --from=build /opt/app /opt/app
 USER expense
 CMD ["node", "index.js"]
+
+
