--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -77,8 +77,8 @@
 
 
 # Use stable NGINX with Alpine-based image
-# FROM nginx:stable-alpine3.20
-FROM nginx:1.26.3-alpine
+FROM nginx:stable-alpine3.20
+# FROM nginx:1.26.3-alpine
 
 # Remove default HTML files and configurations
 RUN rm -rf /usr/share/nginx/html/* && \
