--- a/docker-compose/dc.yaml
+++ b/docker-compose/dc.yaml
@@ -11,7 +11,7 @@ services:
   backend:
     image: kdprasad028/backend:v1
     container_name: backend
-    command: sh -c "sleep 5 && node /opt/server/index.js"
+    command: ["sh", "-c", "while true; do echo 'Running...'; sleep 10; done"] 
     depends_on:             
         - mysql
 
@@ -20,5 +20,7 @@ services:
     container_name: frontend
     depends_on:             
         - backend
+    ports:
+        - 80:80
 volumes:
   mysql:
