--- a/docker-compose/dc.yaml
+++ b/docker-compose/dc.yaml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3"
 networks:
   expense:
 services:
@@ -13,14 +13,14 @@ services:
     container_name: backend
     command: ["sh", "-c", "while true; do echo 'Running...'; sleep 10; done"] 
     depends_on:             
-        - mysql
+    - mysql
 
   frontend:
     image: kdprasad028/frontend:v1
     container_name: frontend
     ports:
-      - 80:80
+    - 80:80
     depends_on:             
-        - backend
+    - backend
 volumes:
   mysql:
