--- a/docker-compose/docker-compose.yaml
+++ b/docker-compose/docker-compose.yaml
@@ -15,8 +15,8 @@ services:
     image: kdprasad028/backend:v1
     container_name: backend
     # command: ["sh", "-c", "while true; do echo 'Running...'; sleep 10; done"] 
-    command:  sh -c "sleep 5 && node /opt/app/index.js" 
-    # command: command: sh -c "sleep 5 && until nc -z mysql 3306; do sleep 2; done && node /opt/app/index.js"
+    # command:  sh -c "sleep 5 && node /opt/app/index.js" 
+    command: sh -c "sleep 5 && until nc -z mysql 3306; do sleep 2; done && node /opt/app/index.js"
     depends_on:             
     - mysql
     networks:
