--- a/roboshop-docker-compose/docker-compose.yaml
+++ b/roboshop-docker-compose/docker-compose.yaml
@@ -103,7 +103,7 @@ services:
     - catalogue
     - cart
     - user
-    - shipping
+    # - shipping
     - payment
     # - dispatch
     networks:
