--- a/11-rabbitmq/Dockerfile
+++ b/11-rabbitmq/Dockerfile
@@ -1,6 +1,26 @@
 FROM rabbitmq:3.12-management
 
-# Enable RabbitMQ plugins (if needed)
-RUN rabbitmq-plugins enable --offline rabbitmq_management
+# # Enable RabbitMQ plugins (if needed)
+# RUN rabbitmq-plugins enable --offline rabbitmq_management
 
-CMD ["rabbitmq-server"]
+# CMD ["rabbitmq-server"]
+
+
+# # Use the official RabbitMQ image with the management plugin
+# FROM rabbitmq:3-management
+
+# # Set the environment variable to load definitions from a file
+# ENV RABBITMQ_SERVER_ADDITIONAL_ERL_ARGS="-rabbitmq_management load_definitions \"/etc/rabbitmq/definitions.json\""
+
+# # Copy the definitions file into the container
+# COPY definitions.json /etc/rabbitmq/definitions.json
+
+# # Expose RabbitMQ default ports
+# EXPOSE 5672 15672
+
+# # Start RabbitMQ server
+# CMD ["rabbitmq-server"]
+
+
+# RABBITMQ_DEFAULT_USER: cm9ib3Nob3A=
+# RABBITMQ_DEFAULT_PASS: cm9ib3Nob3AxMjM=
