--- a/9-redis/Dockerfile
+++ b/9-redis/Dockerfile
@@ -1,10 +1,10 @@
 FROM redis:7.2
 
-# Set working directory
-WORKDIR /data
+# # Set working directory
+# WORKDIR /data
 
-# Copy the JavaScript file into the container
-COPY myscript.js /data/myscript.js
+# # Copy the JavaScript file into the container
+# COPY *.js /data/
 
-# Run Redis and Load the JS File
-CMD ["redis-server"]
+# # Run Redis and Load the JS File
+# CMD ["redis-server"]
