--- a/roboshop-docker-compose/docker-compose.yaml
+++ b/roboshop-docker-compose/docker-compose.yaml
@@ -72,7 +72,7 @@ services:
   shipping:
     image: kdprasad028/shipping:v1
     container_name: shipping 
-    command: java -jar target/shipping.jar
+    command: ["java","-jar", "target/shipping.jar"]
     depends_on:             
     - mysql
     networks:
